fix: исправлено обращение к несуществующему методу